# OmniPlayer

./: CMakeLists.txt  LICENSE  README.md  build.bat
src/: CMakeLists.txt  main.cpp
src/core/: AudioDecoder.cpp  AudioDecoder.h  AudioOutput.cpp  AudioOutput.h  Clock.cpp  Clock.h  Demuxer.cpp  Demuxer.h  FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h  PlayerCore.cpp  PlayerCore.h  Types.h  VideoDecoder.cpp  VideoDecoder.h  VideoRenderer.cpp  VideoRenderer.h
src/shaders/: yuv.vert  yuv420p.frag
src/ui/: ControlBar.cpp  ControlBar.h  MainWindow.cpp  MainWindow.h  VideoWidget.cpp  VideoWidget.h
